--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wintage-ecomm-app",
+  "name": "vintx-marketplace",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -8,20 +8,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
-
+    "postinstall": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/nextjs": "^6.19.4",
     "@prisma/client": "^6.8.2",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@uploadthing/react": "^7.3.1",
     "class-variance-authority": "^0.7.1",
-    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
@@ -34,7 +36,6 @@
     "uploadthing": "^7.7.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -45,8 +46,5 @@
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
   }
 }
